WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281839
Twitch.tv ASSERTION FAILED: mode == Verify => !geometryChanged
https://bugs.webkit.org/show_bug.cgi?id=281839
Summary
Twitch.tv ASSERTION FAILED: mode == Verify => !geometryChanged
Matt Woodrow
Reported
2024-10-20 15:14:36 PDT
This assertion fires while trying to load the twitch.tv home page.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-20 15:14:49 PDT
<
rdar://problem/138286002
>
Matt Woodrow
Comment 2
2024-10-20 15:18:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35504
EWS
Comment 3
2024-10-22 01:49:21 PDT
Committed
285549@main
(ae547fbaa071): <
https://commits.webkit.org/285549@main
> Reviewed commits have been landed. Closing PR #35504 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug