Twitch.tv ASSERTION FAILED: mode == Verify => !geometryChanged. https://bugs.webkit.org/show_bug.cgi?id=281839 <rdar://138286002>

Reviewed by NOBODY (OOPS!).

Scroll requests are normally handled asynchronously, or their RenderLayers get position updates from an immediate call to updateLayerPositionsAfterOverflowScroll from within RenderLayerScrollableArea::scrollTo.
In rare cases neither of those work (overflow:hidden to prevent async, and visibility:hidden to hit an early return RenderLayer::recursiveUpdateLayerPositionsAfterScroll), and the scroll position changes without a layer update.

Mark the layer and descendants (their position relative to this layer might have changed) as needing an update.

* LayoutTests/fast/layers/hidden-scroller-layer-position-crash-expected.txt: Added.
* LayoutTests/fast/layers/hidden-scroller-layer-position-crash.html: Added.
* Source/WebCore/rendering/RenderLayerScrollableArea.cpp:
(WebCore::RenderLayerScrollableArea::scrollTo):